[package]
name = "conduit_service"
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "mod.rs"
crate-type = [
	"rlib",
#	"dylib",
]

[features]
brotli_compression = [
	"reqwest/brotli",
]
console = [
	"dep:rustyline-async",
	"dep:termimad",
]
#dev_release_log_level = []
element_hacks = []
gzip_compression = [
	"reqwest/gzip",
]
zstd_compression = [
    "reqwest/zstd",
]
release_max_log_level = [
	"tracing/max_level_trace",
	"tracing/release_max_level_info",
	"log/max_level_trace",
	"log/release_max_level_info",
]

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
conduit-core.workspace = true
conduit-database.workspace = true
const-str.workspace = true
futures.workspace = true
hickory-resolver.workspace = true
http.workspace = true
image.workspace = true
ipaddress.workspace = true
itertools.workspace = true
jsonwebtoken.workspace = true
log.workspace = true
loole.workspace = true
lru-cache.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
ruma.workspace = true
rustyline-async.workspace = true
rustyline-async.optional = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
termimad.workspace = true
termimad.optional = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
webpage.workspace = true

[lints]
workspace = true
